@@ -1,38 +1,42 @@
 package telran.util;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.LinkedList;
 import java.util.NoSuchElementException;
 
 public class StackInt {
-	List <Integer> stack = new ArrayList<Integer>();
-    int maxNumber;
+	
+	private LinkedList<Integer> numbers = new LinkedList<>();
+	private LinkedList<Integer> maxNumbers = new LinkedList<>();
 	
 	public int pop() {
-		if(stack.isEmpty()) {
+		//removes last number and returns removed number
+		//throws exception NoSuchElementException for empty stack
+		if (numbers.isEmpty()) {
 			throw new NoSuchElementException();
-		}		
-		return stack.remove(stack.size() - 1);
+		}
+		int res = numbers.removeLast();
+		if (res == maxNumbers.getLast()) {
+			maxNumbers.removeLast();
+		}
+		return res;
 	}
-	
 	public void push(int number) {
-		if(stack.isEmpty()) {
-			maxNumber = number;
+		//adds number at end of a stack
+		numbers.add(number);
+		if (maxNumbers.isEmpty() || number >= maxNumbers.getLast()) {
+			maxNumbers.add(number);
 		}
-		if(number > maxNumber) {
-			maxNumber = number;
-		}
-		stack.add(number);
 	}
-	
 	public boolean isEmpty() {
-		return stack.isEmpty();
+		//returns true if a stack is empty
+		return numbers.isEmpty();
 	}
-	
 	public int getMaxNumber() {
-		if(stack.isEmpty()) {
+		//returns maximal number existing in a stack
+		//throws exception NoSuchElementException for empty stack
+		if (maxNumbers.isEmpty()) {
 			throw new NoSuchElementException();
 		}
-		return maxNumber;
+		return maxNumbers.getLast();
 	}
 }
